# fastapi-template

./: README.md  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: test.yml
docker/prod/: Dockerfile
src/server/: app.py  injector.py  main.py  setting.py
src/server/api/: __init__.py
src/server/api/v1/: __init__.py  store.py
src/server/middlewares/: __init__.py  log_middleware.py
src/server/services/: redis.py
tests/api/: test_health.py
